--- a/package.json
+++ b/package.json
@@ -270,7 +270,7 @@
         },
         "laravelFileCreator.showCreateCommand": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "markdownDescription": "Show in the 'New Laravel file...' menu to create a Console Command",
           "order": 4
         },
