--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vscode-laravel-file-creator",
   "displayName": "Laravel File Creator",
+  "publisher": "junveloper",
   "description": "A Visual Studio Code Extension to create Laravel files from context menu in file explorer",
   "version": "0.0.1",
   "author": {
