--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "publisher": "junveloper",
   "description": "A Visual Studio Code Extension to create Laravel files from context menu in file explorer",
   "version": "1.0.0",
+  "engines": {
+    "vscode": "^1.8.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Junveloper/laravel-file-creator.git"
