--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "publisher": "junveloper",
   "description": "A Visual Studio Code Extension to create Laravel files from context menu in file explorer",
   "version": "1.0.0",
+  "icon": "icon.png",
   "engines": {
-    "vscode": "^1.8.0"
+    "vscode": "^1.96.0"
   },
   "repository": {
     "type": "git",
@@ -14,9 +15,6 @@
   "author": {
     "name": "Jun Im",
     "url": "https://github.com/junveloper"
-  },
-  "engines": {
-    "vscode": "^1.96.0"
   },
   "categories": [
     "Other"
